# model-ops-control-plane

./: .gitignore  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  pages.yml
configs/: evals.example.yaml  route.example.yaml
docs/: roadmap.md
docs/rfcs/: 0001-mvp.md
logs/: sample_usage.jsonl
site/: index.html  package-lock.json  package.json  vite.config.js
site/src/: main.css  main.js
site/src/data/: sample-report.json
src/mops/: __init__.py  cli.py  config.py  evals.py  logs.py  reporting.py
tests/: test_evals.py  test_logs.py  test_reporting.py
