[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mops"
version = "0.1.0"
description = "Model Ops Control Plane CLI"
authors = [{ name = "Zordar" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "pydantic>=2.6.4"
]

[project.scripts]
mops = "mops.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mops"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
